# libgoldmine

./: .gitmodules  CMakeLists.txt
broker/: broker.cpp  broker.h  brokerclient.cpp  brokerclient.h  brokerserver.cpp  brokerserver.h
doc/: goldmine-protocol.md
goldmine/: data.h  exceptions.h
io/: ioline.h  iolinemanager.cpp  iolinemanager.h  message.cpp  message.h
io/common/: inproc.cpp  inproc.h
io/posix/: io_socket.cpp  io_socket.h
io/win32/: pipes.cpp  pipes.h  win_socket.cpp  win_socket.h
python/: wrappers.cpp
quotesource/: quotesource.cpp  quotesource.h  quotesourceclient.cpp  quotesourceclient.h
test-misc/: broker-client.cpp  broker-server.cpp  client.cpp  quotesource-client.cpp  quotesource-server.cpp  server.cpp
tests/: brokerclient_test.cpp  brokerserver_test.cpp  inproc_test.cpp  message_test.cpp  quotesource_test.cpp  quotesourceclient_test.cpp
tests-integration/: brokerclient_test.cpp  brokerserver_test.cpp  inproc_integration_test.cpp  messageprotocol_test.cpp  pipes_test.cpp  tests.cpp  unixsocket_test.cpp  winsocket_test.cpp
tests/libgoldmine/: brokerserver_test.cpp  quotesourceclient_test.cpp
